# mridul_me

./: .gitignore  main.py  process_data.py  pyproject.toml
model/backend/: download_model.py  load_model.py
model/data/: create_hinglish_set.py
model/frontend/: chat_model.py
model/tuning/: check_tokenizer.py  compare_tokenizer.py  cpt_tuning.py  model_architecture.py  sft_tuning.py  test_eos.py  test_sft_tuning.py  test_tuning.py  tokenizer_splitting.py
