[project]
name = "mridul-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio",
    "huggingface-hub",
    "pydantic",
    "accelerate",
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm",
]
